--- a/ansible-playbook/roles/dotfiles/files/.gitconfig
+++ b/ansible-playbook/roles/dotfiles/files/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = odan
-	email = odan3240@gmail.com
+	name = mizdra
+	email = pp.mizdra@gmail.com
 
 [alias]
     graph = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative --date-order
