--- a/ansible-playbook/roles/dotfiles/files/.gitconfig
+++ b/ansible-playbook/roles/dotfiles/files/.gitconfig
@@ -3,13 +3,47 @@
 	email = pp.mizdra@gmail.com
 
 [alias]
-    graph = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative --date-order
+  graph = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative --date-order
+	CLEAR = reset --hard HEAD
+	s = switch
+	sclone = clone --depth 1
+	br = !gh pr view --web || hub browse
+	pu = !git push -u origin $(git symbolic-ref --short HEAD)
 
 [ghq]
-	root = ~/source
+	root = ~/src
 
 [includeIf "gitdir:~/project/"]
 	path = ~/project/.gitconfig
 
 [core]
-    excludesfile = ~/.gitignore
+  excludesfile = ~/.gitignore
+	ignorecase = false
+
+[push]
+	default = simple
+
+[merge]
+	ff = false
+
+[pull]
+	ff = only
+	rebase = true
+
+[pager]
+	log = diff-highlight | less
+	show = diff-highlight | less
+	diff = diff-highlight | less
+
+[diff]
+	compactionHeuristic = true
+
+[rebase]
+	autosquash = true
+	autostash = true
+
+[url "git@github.com:"]
+	insteadOf = https://github.com/
+
+[init]
+	defaultBranch = main
