--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -15,7 +15,7 @@ permissions:
 jobs:
   benchmark:
     runs-on: macos-latest
-    timeout-minutes: 15
+    timeout-minutes: 30
 
     steps:
     - uses: actions/checkout@v2
@@ -26,10 +26,10 @@ jobs:
       run: /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 
     - name: Install Ansible
-      run: brew install ansible
+      run: python -m pip install --user ansible
 
-    - name: Install Starship and sheldon
-      run: brew install starship sheldon gnu-time
+    - name: Install gnu-time
+      run: brew install gnu-time
     
     - name: Run setup
       run: ./setup.sh
