--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -27,13 +27,13 @@ jobs:
 
     - uses: actions/cache@v2
       with:
-      path: ~/.cache/pip
-      key: ${{ runner.os }}-pip-v1
-      restore-keys: |
-        ${{ runner.os }}-pip-
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-v1
+        restore-keys: |
+          ${{ runner.os }}-pip-
 
     - name: Install Ansible
-      run: python -m pip install --user ansible
+      run: python3 -m pip install --user ansible
 
     - name: Install gnu-time
       run: brew install gnu-time
