--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -24,9 +24,7 @@ jobs:
           ${{ runner.os }}-pip-
 
     - name: Install Ansible
-      run: python -m pip install --user ansible
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+      run: python3 -m pip install --user ansible
 
     - name: Run setup
       run: ./setup.sh
