--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -24,7 +24,7 @@ jobs:
           ${{ runner.os }}-pip-
 
     - name: Install Ansible
-      run: python3 -m pip install --user ansible
+      run: python3 -m pip install ansible
 
     - name: Run setup
       run: ./setup.sh
