--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -25,15 +25,8 @@ jobs:
     - name: Install Homebrew
       run: /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 
-    - uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-v1
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
     - name: Install Ansible
-      run: python3 -m pip install ansible
+      run: brew install ansible
 
     - name: Install gnu-time
       run: brew install gnu-time
