push の時のみ ssh を使うように
- そもそもなんでこういう設定にしたのか記憶がない
- とはいえ #3 で困っているので一旦 push のみに限定してみる

--- a/ansible-playbook/roles/dotfiles/files/.gitconfig
+++ b/ansible-playbook/roles/dotfiles/files/.gitconfig
@@ -43,7 +43,7 @@
 	autostash = true
 
 [url "git@github.com:"]
-	insteadOf = https://github.com/
+	pushInsteadOf = https://github.com/
 
 [init]
 	defaultBranch = main
