--- a/ansible-playbook/roles/dotfiles/files/.gitconfig
+++ b/ansible-playbook/roles/dotfiles/files/.gitconfig
@@ -31,9 +31,9 @@
 	rebase = true
 
 [pager]
-	log = diff-highlight | less
-	show = diff-highlight | less
-	diff = diff-highlight | less
+	log = `brew --prefix git`/share/git-core/contrib/diff-highlight/diff-highlight | less
+	show = `brew --prefix git`/share/git-core/contrib/diff-highlight/diff-highlight | less
+	diff = `brew --prefix git`/share/git-core/contrib/diff-highlight/diff-highlight | less
 
 [diff]
 	compactionHeuristic = true
