やっぱり clone 時も ssh を使うように
- `pushInsteadOf` だと`git clone https://github.com/mizdra/private-repository` した時に、https での認証が行われて、ユーザ名と GitHub PAT を入力させられる
- 基本的に https の認証はしたくないので、ssh 認証に強制してしまう

--- a/ansible-playbook/roles/dotfiles/files/.gitconfig
+++ b/ansible-playbook/roles/dotfiles/files/.gitconfig
@@ -43,7 +43,7 @@
 	autostash = true
 
 [url "git@github.com:"]
-	pushInsteadOf = https://github.com/
+	insteadOf = https://github.com/
 
 [init]
 	defaultBranch = main
