ricty が使えるように

--- a/ansible-playbook/roles/homebrew/files/Brewfile
+++ b/ansible-playbook/roles/homebrew/files/Brewfile
@@ -1,5 +1,6 @@
 tap "homebrew/bundle"
 tap "homebrew/core"
+tap "sanemat/font"
 brew "ansible"
 brew "anyenv"
 brew "coreutils"
@@ -10,6 +11,8 @@ brew "jq"
 brew "sheldon"
 brew "starship"
 brew "wget"
+brew "fontforge"
+brew "ricty"
 cask "discord"
 cask "docker"
 cask "google-chrome"
