--- a/ansible-playbook/roles/homebrew/tasks/main.yml
+++ b/ansible-playbook/roles/homebrew/tasks/main.yml
@@ -6,3 +6,11 @@
 - name: Run brew bundle
   shell: brew bundle --file {{ role_path }}/files/Brewfile
   changed_when: false
+
+- name: Copy ricty font files
+  shell: >
+    cp -f $(brew --cellar ricty)/*/share/fonts/Ricty*.ttf ~/Library/Fonts/;
+    fc-cache -vf
+  args:
+    # 既に ricty のフォントがコピーされていたらタスクをスキップ
+    creates: ~/Library/Fonts/Ricty-Bold.ttf
