anyenv の初期化も ansible でやってしまう

--- a/ansible-playbook/roles/homebrew/tasks/main.yml
+++ b/ansible-playbook/roles/homebrew/tasks/main.yml
@@ -14,3 +14,9 @@
   args:
     # 既に ricty のフォントがコピーされていたらタスクをスキップ
     creates: ~/Library/Fonts/Ricty-Bold.ttf
+
+- name: Initialize anyenv
+  shell: anyenv install --init
+  args:
+    # 既に anyenv のディレクトリが生成されていたらタスクをスキップ
+    creates: ~/.config/anyenv/anyenv-install
