秘伝の zsh config をコピペしてくる

--- a/ansible-playbook/roles/homebrew/files/Brewfile
+++ b/ansible-playbook/roles/homebrew/files/Brewfile
@@ -13,6 +13,8 @@ brew "starship"
 brew "wget"
 brew "fontforge"
 brew "ricty"
+brew "pwgen"
+brew "colordiff"
 cask "discord"
 cask "docker"
 cask "google-chrome"
