--- a/ansible-playbook/roles/dotfiles/files/.gitconfig
+++ b/ansible-playbook/roles/dotfiles/files/.gitconfig
@@ -7,7 +7,7 @@
 	CLEAR = reset --hard HEAD
 	s = switch
 	sclone = clone --depth 1
-	br = !gh pr view --web || hub browse
+	br = !gh pr view --web || gh browse
 	pu = !git push -u origin $(git symbolic-ref --short HEAD)
 
 [ghq]
